<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/m_padding"
    android:background="@color/buttonColor"
    android:orientation="vertical"
    android:padding="@dimen/m_padding">

    <ImageView
        android:id="@+id/melody_logo"
        style="@style/PlayerMelodyLogo"
        android:contentDescription="@string/melody_logo"
        tools:src="@drawable/david_guetta__martin_garrix___brooks_like_i_do" />

    <View
        android:id="@+id/separator_1"
        style="@style/PlayerSeparator" />

    <TextView
        android:id="@+id/melody_title_text"
        style="@style/PlayerMelodyTitle"
        tools:text="@string/tools_melody_title" />

    <TextView
        android:id="@+id/melody_singer_text"
        style="@style/PlayerMelodySinger"
        tools:text="@string/tools_melody_singer" />

    <View
        android:id="@+id/separator_2"
        style="@style/PlayerSeparator" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/seekbar_drawable"
        android:secondaryProgress="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="@dimen/m_padding">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/genres_button"
                style="@style/NavigatePlayerButton"
                android:background="@drawable/genres_black_24dp"
                android:contentDescription="@string/to_genres_button" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/play_pause_button"
                style="@style/PlayerButton"
                android:background="@drawable/play_circle_outline_black_24dp"
                android:contentDescription="@string/play_pause_button" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/stop_button"
                style="@style/PlayerButton"
                android:background="@drawable/stop_circle_outline_black_24dp"
                android:contentDescription="@string/stop_button" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/playlist_button"
                style="@style/NavigatePlayerButton"
                android:background="@drawable/playlist_black_24dp"
                android:contentDescription="@string/to_playlist_button" />
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>