<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.mydj.MelodiesActivity">

    <ListView
        android:id="@+id/melodies_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/now_playing_layout"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/m_padding" />

    <RelativeLayout
        android:id="@+id/now_playing_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/buttonColor"
        android:padding="@dimen/s_padding"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/now_playing_melody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonColor"
            android:orientation="vertical">

            <TextView
                style="@style/NowPlayingLabel"
                android:text="@string/now_is_playing"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/now_playing_melody_title"
                style="@style/PlaylistMelodyTitle"
                android:textAlignment="center"
                tools:text="@string/tools_melody_title" />

            <TextView
                android:id="@+id/now_playing_melody_singer"
                style="@style/PlaylistMelodySinger"
                android:textAlignment="center"
                tools:text="@string/tools_melody_singer" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/genres_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/genres_black_24dp"
            android:contentDescription="@string/to_genres_button" />

    </RelativeLayout>

</RelativeLayout>



